### Релиз 1.накостылил сходство с меню

--- a/index.html
+++ b/index.html
@@ -11,9 +11,41 @@
   <title>Movie</title>
 </head>
 <body>
-  <header >
-  <!-- ваш код здесь -->
-
+  <header>
+    <div class="mainBanner">
+      <img class="mainBanner" src="./imagebanner.jpeg" alt="mainBanner">
+    </div>
+    <div class="menu">
+      <div class="logo">
+        <a href="">
+          <img class="logo" src="./logo.png" alt="">
+        </a>
+      </div>
+      <div class="elementMenu">
+        <a href="">
+          <div class="textMenu">
+            <img src="./play.svg" class="menuIcon" alt="play">
+            <span class="textMenu">Онлайн-кинотеатр</span>
+          </div>
+        </a>
+      </div>
+      <div class="elementMenu">
+        <a href="">
+          <div class="textMenu">
+            <img src="./oscar.svg" class="menuIcon" alt="play">
+            <span class="textMenu">Оскар-2023</span>
+          </div>
+        </a>
+      </div>
+      <div class="search">
+        <form id="search" role="search" action="/search" class="search" autocomplete="off">
+          <div class="search">
+              <input name="q" type="text" placeholder="Фильмы, сериалы, переодевание в фурий" value="" autocomplete="off" maxlength="240" class="s-input">
+          </div>
+      </div>
+    </div>
+      
+    
   </header>
 
 
